--- a/day-14/simple-python-app/buildspec.yml
+++ b/day-14/simple-python-app/buildspec.yml
@@ -2,6 +2,7 @@ version: 0.2
 #adding comment to test automated build trigger using aws code pipelines i.e. which acts as a orchestrator and triggers code build
 # adding one more comment, where in build.spec yml file $CODEBUILD_BUILD_NUMBER is added inplace of tag
 #adding one line
+#adding one more line to test code pipeline automation
 env:
   parameter-store:
     DOCKER_REGISTRY_USERNAME: /myapp/docker-credentials/username
